# knights-of-the-terminal

./: .gitignore  Board.cpp  CMakeLists.txt  Evaluation.cpp  FIXES.md  GenBishop.cpp  Move.h  MoveGenerator.h  MoveOrdering.h  OpeningBook.h  Precomputed.cpp  Precomputed.h  README.md  RepetitionTable.h  Search.h  Zobrist.cpp  Zobrist.h  build.bat  build.sh  chess  engine  main.cpp  run.bat  run.sh
chessbotClassic/: Attack.cpp  Evaluate.cpp  Evaluate.h  GenerateMoves.cpp  GenerateMoves.h  MakeMove.cpp  MakeMove.h  Move.h  Position.h  Search.cpp  Search.h  build.bat  chessbot.sh  main.cpp  run.bat
chessbotRewrite/: Bitboard.h  Board.h  Bot.cpp  Bot.h  Evaluation.h  MoveGenerator.cpp  MoveOrdering.cpp  OpeningBook.cpp  RepetitionTable.cpp  Search.cpp  Searcher.cpp  Searcher.h  Types.h  chessbot
docs/: sequenceDiagram.md
include/: Attack.h  BookResource.hpp  ChessEngine.hpp  GenerateMoves.h  InternalUtils.hpp  MakeMove.h  Move.h  Position.h
src/: Arbiter.cpp  Attack.cpp  Board.cpp  Bot.cpp  CoreTypes.cpp  EngineUCI.cpp  Evaluation.cpp  FenUtility.cpp  GenerateMoves.cpp  MakeMove.cpp  MoveGenerator.cpp  MoveOrdering.cpp  MoveUtility.cpp  OpeningBook.cpp  PrecomputedMoveData.cpp  Program.cpp  RepetitionAndTransposition.cpp  Searcher.cpp  main.cpp
version2/: UciBoardArena2.java
