cmake_minimum_required(VERSION 3.20)
project(faithful_cpp_continue LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
file(GLOB CPP_SOURCES CONFIGURE_DEPENDS src/*.cpp)
add_executable(faithful_cpp_continue ${CPP_SOURCES})
target_include_directories(faithful_cpp_continue PRIVATE include)
find_package(Threads REQUIRED)
target_link_libraries(faithful_cpp_continue PRIVATE Threads::Threads)
